force-app/main/default/objects/Route__c/fields/Destination_Country_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country_s_Name__c</fullName>
    <formula>DestinationCountry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Country&apos;s Name</label>
    <type>Text</type>
</CustomField>