force-app/main/default/objects/Route__c/fields/DestinationZone__c.field-meta.xml
<CustomField>
    <fullName>DestinationZone__c</fullName>
    <formula>text( DestinationCountry__r.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination&apos;s Zone</label>
    <type>Text</type>
</CustomField>