force-app/main/default/objects/Route__c/fields/DVietnamsRegion__c.field-meta.xml
<CustomField>
    <fullName>DVietnamsRegion__c</fullName>
    <formula>text( To__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D-VN&apos;s Region</label>
    <type>Text</type>
</CustomField>