force-app/main/default/objects/Route__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OriginCountry__c</field>
            <operation>equals</operation>
            <valueField>PortCode__c.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>