force-app/main/default/objects/Route__c/fields/O_Vietnam_s_Region__c.field-meta.xml
<CustomField>
    <fullName>O_Vietnam_s_Region__c</fullName>
    <formula>text( From__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O-VN&apos;s Region</label>
    <type>Text</type>
</CustomField>