force-app/main/default/objects/Route__c/fields/Origin_Country_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country_s_Name__c</fullName>
    <formula>OriginCountry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Country&apos;s Name</label>
    <type>Text</type>
</CustomField>