force-app/main/default/objects/Route__c/fields/OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>OriginCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country__c.Embargoed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>