force-app/main/default/objects/Route__c/fields/OriginsZone__c.field-meta.xml
<CustomField>
    <fullName>OriginsZone__c</fullName>
    <formula>text( OriginCountry__r.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin&apos;s Zone</label>
    <type>Text</type>
</CustomField>