force-app/main/default/objects/Route__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.DestinationCountry__c</field>
            <operation>equals</operation>
            <valueField>PortCode__c.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Routes (To)</relationshipLabel>
    <relationshipName>Routes1</relationshipName>
    <type>Lookup</type>
</CustomField>