force-app/main/default/objects/Route__c/fields/TransitPortVIA__c.field-meta.xml
<CustomField>
    <fullName>TransitPortVIA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port (VIA)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Routes (Transit Port (VIA))</relationshipLabel>
    <relationshipName>Routes2</relationshipName>
    <type>Lookup</type>
</CustomField>